# ulb-ia-projects

./: README.md
project1-search/: pyproject.toml
project1-search/cartes/: corners  gems
project1-search/cartes/1_agent/: impossible  vide  zigzag
project1-search/cartes/2_agents/: impossible  vide  zigzag
project1-search/src/: priority_queue.py  problem.py  search.py  visualize.py
project1-search/tests/: test_astar.py  test_bfs.py  test_corner_search.py  test_dfs.py  test_gem_search.py  test_simple_problem.py  utils.py
project2-adversarial/: pyproject.toml
project2-adversarial/cartes/: 7x7_random  ushape_3agents  void_lasers
project2-adversarial/results/: results_7x7_1-9.csv  results_lasers_1-9.csv  results_ushape_1-9.csv
project2-adversarial/src/: adversarial_search.py  mdp.py  world_mdp.py
project2-adversarial/tests/: graph_mdp.py  test_alpha_beta.py  test_expectimax.py  test_mdp.py  test_minimax.py
project2-adversarial/tests/graphs/: vary-depth.graph
project3-bayes/: both_test_balanced.csv  main.py  notebook.ipynb  pyproject.toml
project4-rl/: pyproject.toml
project4-rl/src/: analysis.py  mdp.py  qlearning.py  value_iteration.py
project4-rl/tests/: graph_mdp.py  modified_reward_world.py  random_wrapper.py  test_analysis.py  test_value_iteration.py  world_mdp.py
project4-rl/tests/graphs/: cliff  cliff.json  graph1.json
