[tool.poetry]
name = "2-adversarial"
version = "0.1.0"
description = ""
authors = ["Yannick Molinghen <yannick.molinghen@ulb.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
typing-extensions = "^4.8.0"
opencv-python = "^4.8.1.78"
rlenv = { git = "https://github.com/yamoling/rlenv" }
laser-learning-environment = "^0.1.8"


[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["src"]


[tool.ruff]
# Check https://beta.ruff.rs/docs/rules/ for all rules
fixable = ["ALL"]

# Do not fix imports automatically (it removes unused imports in __init__.py files)
# unfixable = ["F401"]
line-length = 140
