[tool.poetry]
name = "project3-bayes"
version = "0.1.0"
description = ""
authors = ["Lucino772 <lucapalmi772@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pyagrum = "^1.10.0"
pandas = "^2.1.3"
pydot = "^1.4.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
pytest = "^7.4.3"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]


[tool.ruff]
# Check https://beta.ruff.rs/docs/rules/ for all rules
fixable = ["ALL"]

# Do not fix imports automatically (it removes unused imports in __init__.py files)
# unfixable = ["F401"]
line-length = 88